--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,11 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["scripting", "activeTab", "clipboardWrite", "tabs", "storage"],
+  "permissions": ["activeTab", "tabs", "clipboardWrite", "storage"],
   "host_permissions": [
     "*://*/*/browse/*",
-    "*://*/*/rest/api/2/issue/*"
+    "*://*/*/rest/api/2/issue/*",
+    "https://gateway-internal.ai.acquia.io/*"
   ],
   "action": {
     "default_icon": {
